Style URL container to improve readability issues due to long links

--- a/src/components/UrlContainer/UrlContainer.css
+++ b/src/components/UrlContainer/UrlContainer.css
@@ -2,6 +2,11 @@
   border: 1px solid black;
   display: inline-block;
   margin: 10px;
-  padding: 5px;
+  padding: 0 2% 2% 2%;
   background-color: #FFF;
+  width: 50%;
+}
+
+.long-url{
+  overflow: scroll;
 }
